# v2-sdk

./: .editorconfig  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  404.html  CNAME  Dockerfile  README.md  SECURITY.md  annotations.md  git-add-remotes.sh  index.html  mkdocs.yml  mkdocs_macros_main.py  package-lock.json  package.json  renovate.json  requirements.txt  sitemap.xml
.github/: CODEOWNERS  MAINTAINERS.md  README.md  milestone.yml  renovate.json
_static/: extra.css  proto.json
android/: README.md  index.html
cli/: .gitignore  Cargo.toml  MAINTAINERS.md  README.md  VERIFICATION.txt  build.rs  index.html  result.txt  rustfmt.toml  rustfmt.yml  signed.json  trinsic-cli.nuspec
cli/.cargo/: _config.toml
cli/choco/: trinsic-cli.nuspec
cli/choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
cli/config/: index.html
cli/data/: client.key  client.pem  https.crt  key.pem  my_ca.key  my_ca.pem
cli/demo/: index.html
cli/sample/: runthrough.sh  vaccination-cred.jsonld
cli/sample/airline/: vaccination-certificate-partial-proof.jsonld
cli/sample/allison/: vaccination-certificate-signed.jsonld
cli/src/: cli.yaml  client.rs  error.rs  lib.rs  macros.rs  main.rs  utils.rs
cli/src/commands/: didcomm.rs  didkey.rs  mod.rs
cli/src/parser/: account.rs  config.rs  didcomm.rs  didkey.rs  issuer.rs  mod.rs  provider.rs  template.rs  trustregistry.rs  vc.rs  wallet.rs
cli/src/proto/: google_protobuf.rs  greet.rs  mod.rs  pbmse.rs  trinsic_services.rs
cli/src/proto/google/protobuf/: mod.rs
cli/src/proto/pbmse/v1/: pbmse.rs
cli/src/proto/sdk/options/v1/: mod.rs
cli/src/proto/services/: mod.rs
cli/src/proto/services/account/v1/: mod.rs
cli/src/proto/services/common/v1/: mod.rs
cli/src/proto/services/debug/v1/: mod.rs
cli/src/proto/services/provider/v1/: mod.rs
cli/src/proto/services/trustregistry/v1/: mod.rs
cli/src/proto/services/universalwallet/v1/: mod.rs
cli/src/proto/services/verifiablecredentials/: mod.rs
cli/src/proto/services/verifiablecredentials/templates/v1/: mod.rs
cli/src/proto/services/verifiablecredentials/v1/: mod.rs  verifiablecredentials.rs
cli/src/services/: account.rs  authentication.rs  config.rs  didcomm.rs  didkey.rs  greet.rs  issuer.rs  mod.rs  provider.rs  template.rs  trustregistry.rs  vc.rs  wallet.rs
cli/src/utils/: mod.rs
cli/test/: .gitignore  README.md  Run-Demo.ps1  state-id-template.json  state-id-values.json
cli/wix/: main.wxs
connect/: config-csharp.yaml  config-dart.yaml  config-typescript-csharp.yaml  config-typescript-fetch.yaml  make-swagger.ps1  swagger_api.json  swagger_internal.json
dart/: CHANGELOG.md  (+3 more)
python/: README.md  index.html  requirements.txt  setup.cfg
python/models/: Attributes_pb2.py  CredentialTemplates_pb2.py  Credentials_pb2.py  Organizations_pb2.py  PresentationTemplates_pb2.py  Presentations_pb2.py
python/proto/services/common/v1/: __init__.py
python/proto/services/trustregistry/v1/: __init__.py
python/proto/services/universalwallet/v1/: __init__.py
python/proto/services/verifiablecredentials/templates/v1/: __init__.py
python/samples/: accessmanagement_service_examples.py  account_demo.py  account_service_examples.py  credential_demo.py  credentialtemplates_service_examples.py  ecosystem_demo.py  file_management_demo.py  filemanagement_service_examples.py  login_confirm_demo.py  provider_demo.py  provider_service_examples.py  templates_demo.py  trustregistry_demo.py  trustregistry_service_examples.py  universalwallet_service_examples.py  vaccine_demo.py  verifiablecredential_service_examples.py  wallet_demo.py
python/tests/: test_trinsic_services.py  test_utilities.py
python/trinsic/: AuthService_pb2.py  CoreService_pb2.py  IssuerService_pb2.py  ProviderService_pb2.py  WalletService_pb2.py  __init__.py  __main__.py  _service_wrappers.py  access_management_service.py  account_service.py  connect_service.py  credential_service.py  credentials_service.py  credentialtemplates_service.py  debug_service.py  file_management_service.py  generate_proto_files.py  greet_pb2.py  helloworld_pb2.py  provider_service.py  security_providers.py  service_base.py  services.py  template_service.py  trinsic_service.py  trinsic_util.py  trustregistry_service.py  wallet_service.py
python/trinsic/pbmse/: pbmse_pb2.py
python/trinsic/proto/: __init__.py
python/trinsic/proto/google/api/: __init__.py
python/trinsic/proto/greet/: __init__.py
python/trinsic/proto/helloworld/: __init__.py
python/trinsic/proto/pbmse/: __init__.py
python/trinsic/proto/pbmse/v1/: __init__.py
python/trinsic/proto/sdk/options/v1/: __init__.py  options_grpc.py
python/trinsic/proto/services/account/v1/: __init__.py  account_grpc.py
python/trinsic/proto/services/common/v1/: __init__.py  common_grpc.py
python/trinsic/proto/services/connect/v1/: __init__.py
python/trinsic/proto/services/filemanagement/v1/: __init__.py
python/trinsic/proto/services/options/: __init__.py
python/trinsic/proto/services/provider/v1/: __init__.py  provider_grpc.py
python/trinsic/proto/services/trust_registry/v1/: trust_registry_grpc.py
python/trinsic/proto/services/trustregistry/v1/: __init__.py
python/trinsic/proto/services/universal_wallet/v1/: universal_wallet_grpc.py
python/trinsic/proto/services/universalwallet/v1/: __init__.py
python/trinsic/proto/services/verifiable_credentials/templates/v1/: templates_grpc.py
python/trinsic/proto/services/verifiable_credentials/v1/: verifiable_credentials_grpc.py
python/trinsic/proto/services/verifiablecredentials/templates/v1/: __init__.py
python/trinsic/proto/services/verifiablecredentials/v1/: __init__.py
python/trinsic/proto/trinsic/services/: __init__.py
python/trinsic/proto/trinsic/services/event/: __init__.py
(+2665 files in other folders)
