[package]
name = "trinsic"
version = "0.1.0"
authors = ["Trinsic <support@trinsic.id>"]
edition = "2021"
license = "Apache-2.0"
description = "Command-line tool for Trinsic APIs"
default-run = "trinsic"
# build = "build.rs"

[dependencies]
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
prost = "0.9"
prost-types = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
okapi = { git ="https://github.com/trinsic-id/okapi", rev = "17dc90a92981197051b3e28495e5f7a2680e385e" }
clap = { version = "~2", features = ["yaml"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
base64 = "0.13"
toml = "0.5"
dirs = "4.0"
yaml-rust = "0.4"
colored = "2"
blake3 = "1.3"
bytes = "1.2"

[build-dependencies]
tonic-build = { version = "0.6", features = ["prost", "rustfmt"] }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "trinsic"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Tomislav Markovski <tomislav@trinsic.id>"
copyright = "2021, Trinsic <hello@trinsic.id>"
license-file = ["../LICENSE", "0"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/trinsic", "usr/local/bin/", "755"],
]
