[package]
name = "trinsic"
version = "0.1.0"
authors = ["Trinsic <support@trinsic.id>"]
edition = "2021"
license = "Apache-2.0"
description = "Command-line tool for Trinsic APIs"
default-run = "trinsic"
# Don't commit the following line to the CI pipeline!
#build = "build.rs"

[dependencies]
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.2.23", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.21.3"
toml = "0.7.6"
dirs = "4.0"
yaml-rust = "0.4"
colored = "2"
blake3 = "1.4"
bytes = "1.4"

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "trinsic"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Tomislav Markovski <tomislav@trinsic.id>"
copyright = "2021, Trinsic <hello@trinsic.id>"
license-file = ["../LICENSE", "0"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/trinsic", "usr/local/bin/", "755"],
]
