[metadata]
name = trinsic-sdk
version = 1.0.1
author = Scott Phillips
author_email = scott.phillips@trinsic.id
description = Trinsic Services SDK bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trinsic-id/okapi/
project_urls =
    Bug Tracker = https://github.com/trinsic-id/okapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    grpclib
    betterproto>=2.0.0b3
    trinsic-okapi>=1.0.2

[options.packages.find]
exclude = tests